# PdfGenerator

./: PdfGenerator.sln  README.md  build.ps1  build.sh
PdfApp/: PdfApp.csproj  PdfGenerator.cs  PdfGeneratorWrapper.cs  Program.cs
PdfGenerator/: Cargo.toml
PdfGenerator/src/: lib.rs
PdfGenerator/tests/: bindings.rs
