[package]
name = "pdf_generator"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
interoptopus = "0.14.23"
interoptopus_backend_csharp = "0.14.24"

typst = "0.12"
typst-render = "0.12"
typst-svg = "0.12"
typst-pdf = "0.12"
typst-kit = { version = "0.12", features = ["embed-fonts"] }
typst-assets = {version = "0.12", features = ["fonts"]}
comemo = "0.4"
futures = "0.3.31"
